--- a/Plugins/PKZip/src/ios/PKZip.xcodeproj/xcshareddata/xcschemes/Zip tvOS.xcscheme
+++ b/Plugins/PKZip/src/ios/PKZip.xcodeproj/xcshareddata/xcschemes/Zip tvOS.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "3425458C1CE525B200336074"
-               BuildableName = "Zip.framework"
-               BlueprintName = "Zip tvOS"
-               ReferencedContainer = "container:Zip.xcodeproj">
+               BuildableName = "PKZip.framework"
+               BlueprintName = "PKZip tvOS"
+               ReferencedContainer = "container:PKZip.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -26,6 +26,7 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      language = ""
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
       </Testables>
@@ -36,6 +37,7 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      language = ""
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
@@ -46,9 +48,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "3425458C1CE525B200336074"
-            BuildableName = "Zip.framework"
-            BlueprintName = "Zip tvOS"
-            ReferencedContainer = "container:Zip.xcodeproj">
+            BuildableName = "PKZip.framework"
+            BlueprintName = "PKZip tvOS"
+            ReferencedContainer = "container:PKZip.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -64,9 +66,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "3425458C1CE525B200336074"
-            BuildableName = "Zip.framework"
-            BlueprintName = "Zip tvOS"
-            ReferencedContainer = "container:Zip.xcodeproj">
+            BuildableName = "PKZip.framework"
+            BlueprintName = "PKZip tvOS"
+            ReferencedContainer = "container:PKZip.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
    </ProfileAction>
