--- a/Plugins/AudioPlayer/plugin.xml
+++ b/Plugins/AudioPlayer/plugin.xml
@@ -23,10 +23,9 @@
 		<config-file target="AndroidManifest.xml" parent="/manifest">
 			<uses-permission android:name="android.permission.INTERNET" />
 		</config-file>
-		<!-- <config-file target="AndroidManifest.xml" parent="/manifest/application">
+		<config-file target="AndroidManifest.xml" parent="/manifest/application">
 			<activity android:name="com.shortsands.videoplayer.AudioPlayer" android:label="AudioPlayer" android:screenOrientation="landscape"></activity>
-		</config-file> -->
-		<!--
+		</config-file>
 		<source-file src="src/android/com/shortsands/audioplayer/AudioPlayer.java" target-dir="src/com/shortsands/audioplayer" />
 		<source-file src="src/android/com/shortsands/audioplayer/AudioService.java" target-dir="src/com/shortsands/audioplayer" />
 		<source-file src="src/android/com/shortsands/audioplayer/AudioPersistence.java" target-dir="src/com/shortsands/audioplayer" />
@@ -39,7 +38,7 @@
 				<param name="ios-package" value="AudioPlayer" />
 			</feature>
 		</config-file>
-		<source-file src="src/ios/build/AudioPlayer.swift" />
+		<source-file src="src/ios/AudioPlayer.swift" />
 		<framework src="src/ios/build/AudioPlayer.framework" custom="true" embed="true" />
 	</platform>
 
