AudioPlayer android working after directory change.

--- a/Plugins/AudioPlayer/src/android/app/build.gradle
+++ b/Plugins/AudioPlayer/src/android/app/build.gradle
@@ -24,13 +24,13 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.+'
+    compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:design:25.+'
     testCompile 'junit:junit:4.12'
 
     compile files('libs/aws-android-sdk-core-2.4.2.jar')
     compile files('libs/aws-android-sdk-s3-2.4.2.jar')
-    compile files('libs/Zip.jar')
+    //compile files('libs/Zip.jar')
     compile files('libs/AWS.jar')
 }
