--- a/YourBible/plugins/com-shortsands-aws/plugin.xml
+++ b/YourBible/plugins/com-shortsands-aws/plugin.xml
@@ -38,6 +38,8 @@
 		<source-file src="src/android/plugin/DownloadPluginZipFileListener.java" target-dir="src/plugin" />
 		<source-file src="src/android/plugin/UploadPluginDataListener.java" target-dir="src/plugin" />
 		<source-file src="src/android/plugin/UploadPluginFileListener.java" target-dir="src/plugin" />
+		<source-file src="src/android/app/src/main/java/com/shortsands/aws/AwsS3Region.java" target-dir="src/com/shortsands/aws" />
+		<source-file src="src/android/app/src/main/java/com/shortsands/aws/AwsS3Manager.java" target-dir="src/com/shortsands/aws" />
 		<source-file src="src/android/app/src/main/java/com/shortsands/aws/AwsS3.java" target-dir="src/com/shortsands/aws" />
 		<source-file src="src/android/app/src/main/java/com/shortsands/aws/AwsS3AbstractListener.java" target-dir="src/com/shortsands/aws" />
 		<source-file src="src/android/app/src/main/java/com/shortsands/aws/AwsS3Cache.java" target-dir="src/com/shortsands/aws" />
@@ -52,6 +54,7 @@
 		<source-file src="src/android/app/src/main/java/com/shortsands/aws/UploadFileListener.java" target-dir="src/com/shortsands/aws" />
 		<source-file src="src/android/app/src/main/java/com/shortsands/io/FileManager.java" target-dir="src/com/shortsands/io" />
 		<source-file src="src/android/app/src/main/java/com/shortsands/io/Zip.java" target-dir="src/com/shortsands/io" />
+		<source-file src="src/android/app/src/main/java/com/shortsands/aws/AWSSqlite3.java" target-dir="src/com/shortsands/aws" />
 		<lib-file src="src/android/app/libs/aws-android-sdk-core-2.4.2.jar" target-dir="src/libs" />
 		<lib-file src="src/android/app/libs/aws-android-sdk-s3-2.4.2.jar" target-dir="src/libs" />
 	</platform>
