android TestApp update all plugins and test app to 3.1.3 gradle, and build.

--- a/Plugins/AudioPlayer/src/android/settings.gradle
+++ b/Plugins/AudioPlayer/src/android/settings.gradle
@@ -1,1 +1,6 @@
 include ':app'
+include ":utility"
+include ":aws"
+
+project(":utility").projectDir = file("../../../Utility/src/android/app")
+project(":aws").projectDir = file("../../../AWS/src/android/app")
