--- a/Plugins/AWS/src/android/app/build.gradle
+++ b/Plugins/AWS/src/android/app/build.gradle
@@ -18,9 +18,10 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:26.1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    api files('libs/aws-android-sdk-core-2.6.22.jar')
+    api files('libs/aws-android-sdk-s3-2.6.22.jar')
+    implementation project(':utility')
 }
