--- a/Plugins/AudioPlayer/src/android/app/build.gradle
+++ b/Plugins/AudioPlayer/src/android/app/build.gradle
@@ -1,10 +1,8 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 26
-    buildToolsVersion '26.0.2'
     defaultConfig {
-        applicationId "com.shortsands.audioplayer"
         minSdkVersion 16
         targetSdkVersion 26
         versionCode 1
@@ -20,15 +18,10 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
-    compile 'com.android.support:appcompat-v7:26.+'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.android.support:design:26.+'
-    compile 'junit:junit:4.12'
-    compile files('libs/aws-android-sdk-core-2.4.2.jar')
-    compile files('libs/aws-android-sdk-s3-2.4.2.jar')
-    compile files('libs/AWS.jar')
+    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support:design:26.+'
+    implementation 'junit:junit:4.12'
+    implementation project(":utility")
+    implementation project(":aws")
 }
