--- a/Plugins/VideoPlayer/src/android/app/build.gradle
+++ b/Plugins/VideoPlayer/src/android/app/build.gradle
@@ -2,7 +2,6 @@ apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 26
-    buildToolsVersion '26.0.2'
     defaultConfig {
         minSdkVersion 19
         targetSdkVersion 26
@@ -23,16 +22,9 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
-    compile 'com.android.support:appcompat-v7:26.+'
-    testCompile 'junit:junit:4.12'
-
-    compile 'com.google.android.exoplayer:exoplayer:r2.3.1'
-    compile files('libs/aws-android-sdk-s3-2.4.2.jar')
-    compile files('libs/aws-android-sdk-core-2.4.2.jar')
-    compile files('libs/PKZip.jar')
-    compile files('libs/AWS.jar')
+    implementation 'com.android.support:appcompat-v7:26.1.0'
+    testImplementation 'junit:junit:4.12'
+    implementation 'com.google.android.exoplayer:exoplayer:r2.3.1'
+    implementation project(":utility")
+    implementation project(":aws")
 }
