--- a/SafeBible/SafeBible_Android/app/src/main/AndroidManifest.xml
+++ b/SafeBible/SafeBible_Android/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     android:hardwareAccelerated="true"
     android:versionCode="11202"
     android:versionName="1.12.2"
-    package="com.shortsands.safebible">
+    package="com.shortsands.yourbible">
     <application android:hardwareAccelerated="true"
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
