--- a/SafeBible/SafeBible_iOS/SafeBible/Info.plist
+++ b/SafeBible/SafeBible_iOS/SafeBible/Info.plist
@@ -20,6 +20,10 @@
 	<string>1.11.3</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>audio</string>
+	</array>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
