--- a/SafeBible/SafeBible_Android/app/build.gradle
+++ b/SafeBible/SafeBible_Android/app/build.gradle
@@ -3,9 +3,11 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 26
     defaultConfig {
-        applicationId "com.shortsands.safebible"
+        applicationId "com.shortsands.yourbible"
         minSdkVersion 19
         targetSdkVersion 26
+        versionCode 11104
+        versionName "1.11.4"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
