Settings initial NotesExportDocument prototype.

--- a/Plugins/Settings/Settings_ios/Settings/Info.plist
+++ b/Plugins/Settings/Settings_ios/Settings/Info.plist
@@ -43,5 +43,17 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSUbiquitousContainers</key>
+	<dict>
+		<key>iCloud.com.shortsands.settings</key>
+		<dict>
+			<key>NSUbiquitousContainerIsDocumentScopePublic</key>
+			<true/>
+			<key>NSUbiquitousContainerSupportedFolderLevels</key>
+			<string>Any</string>
+			<key>NSUbiquitousContainerName</key>
+			<string>Settings Test</string>
+		</dict>
+	</dict>
 </dict>
 </plist>
