Settings fixed export database file type to be recognized on import.

--- a/Plugins/Settings/Settings_ios/Settings/Info.plist
+++ b/Plugins/Settings/Settings_ios/Settings/Info.plist
@@ -57,25 +57,28 @@
 	</dict>
 	<key>UTExportedTypeDeclarations</key>
 	<array>
-    		<dict>
-        		<key>UTTypeIdentifier</key>
-        		<string>com.shortsands.notes</string>
-        		<key>UTTypeReferenceURL</key>
-        		<string>http://shortsands.com</string>
-        		<key>UTTypeDescription</key>
-        		<string>SafeBible User's Notes</string>
-        		<key>UTTypeIconFile</key>
-        		<string>AppIcon</string>
-        		<key>UTTypeConformsTo</key>
-        		<string>public.database</string>
-        		<key>UTTypeTagSpecification</key>
-        		<dict>
-            			<key>public.filename-extension</key>
-            			<string>notes</string>
-            			<key>public.mime-type</key>
-            			<string>application/x-sqlite3</string>
-        		</dict>
-    		</dict>
+		<dict>
+			<key>UTTypeIdentifier</key>
+			<string>com.shortsands.notes</string>
+			<key>UTTypeReferenceURL</key>
+			<string>http://shortsands.com</string>
+			<key>UTTypeDescription</key>
+			<string>SafeBible User&apos;s Notes</string>
+			<key>UTTypeIconFile</key>
+			<string>AppIcon</string>
+			<key>UTTypeConformsTo</key>
+			<array>
+				<string>public.database</string>
+				<string>public.data</string>
+			</array>
+			<key>UTTypeTagSpecification</key>
+			<dict>
+				<key>public.filename-extension</key>
+				<string>notes</string>
+				<key>public.mime-type</key>
+				<string>application/x-sqlite3</string>
+			</dict>
+		</dict>
 	</array>
 </dict>
 </plist>
