Settings be able to start App with click on .notes file.

--- a/Plugins/Settings/Settings_ios/Settings/Info.plist
+++ b/Plugins/Settings/Settings_ios/Settings/Info.plist
@@ -94,6 +94,8 @@
 			</dict>
 		</dict>
 	</array>
+	<key>LSSupportsOpeningDocumentsInPlace</key>
+	<true/>
 	<!-- <key>UTImportedTypeDeclarations</key>
 	<array>
 		<dict/>
