Settings export using interaction controller, not picker.

--- a/Plugins/Settings/Settings_ios/Settings/Info.plist
+++ b/Plugins/Settings/Settings_ios/Settings/Info.plist
@@ -81,7 +81,7 @@
 			<array/>
 			<key>UTTypeConformsTo</key>
 			<array>
-				<!-- <string>public.database</string> -->
+				<string>public.database</string>
 				<string>public.data</string>
 				<string>public.content</string>
 			</array>
