--- a/SafeBible2/SafeBible_ios/Settings/Info.plist
+++ b/SafeBible2/SafeBible_ios/Settings/Info.plist
@@ -2,10 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>UIViewControllerBasedStatusBarAppearance</key>
-	<true/>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
+	<key>CFBundleDisplayName</key>
+	<string>SafeBible</string>
 	<key>CFBundleDocumentTypes</key>
 	<array>
 		<dict>
@@ -21,8 +21,6 @@
 			</array>
 		</dict>
 	</array>
-	<key>CFBundleDisplayName</key>
-	<string>Settings Test</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -34,10 +32,12 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.5</string>
+	<string>2.0.1</string>
 	<key>CFBundleVersion</key>
-	<string>1.5</string>
+	<string>2.0.1</string>
 	<key>LSRequiresIPhoneOS</key>
+	<true/>
+	<key>LSSupportsOpeningDocumentsInPlace</key>
 	<true/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
@@ -58,33 +58,23 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
-	<!-- <key>NSUbiquitousContainers</key>
-	<dict>
-		<key>iCloud.com.shortsands.settings</key>
-		<dict>
-			<key>NSUbiquitousContainerIsDocumentScopePublic</key>
-			<true/>
-			<key>NSUbiquitousContainerSupportedFolderLevels</key>
-			<string>Any</string>
-			<key>NSUbiquitousContainerName</key>
-			<string>Settings Test</string>
-		</dict>
-	</dict> -->
+	<key>UIViewControllerBasedStatusBarAppearance</key>
+	<true/>
 	<key>UTExportedTypeDeclarations</key>
 	<array>
 		<dict>
-			<key>UTTypeIdentifier</key>
-			<string>com.shortsands.notes</string>
-			<key>UTTypeDescription</key>
-			<string>SafeBible User&apos;s Notes</string>
-			<key>UTTypeIconFiles</key>
-			<array/>
 			<key>UTTypeConformsTo</key>
 			<array>
 				<string>public.database</string>
 				<string>public.data</string>
 				<string>public.content</string>
 			</array>
+			<key>UTTypeDescription</key>
+			<string>SafeBible User's Notes</string>
+			<key>UTTypeIconFiles</key>
+			<array/>
+			<key>UTTypeIdentifier</key>
+			<string>com.shortsands.notes</string>
 			<key>UTTypeTagSpecification</key>
 			<dict>
 				<key>public.filename-extension</key>
@@ -96,22 +86,5 @@
 			</dict>
 		</dict>
 	</array>
-	<key>LSSupportsOpeningDocumentsInPlace</key>
-	<true/>
-	<!-- <key>CFBundleURLTypes</key>
-	<array>
-		<dict>
-			<key>CFBundleURLName</key>
-			<string>com.shortsands.settings</string>
-			<key>CFBundleURLSchemes</key>
-			<array>
-				<string>safenotes</string>
-			</array>
-		</dict>
-	</array> -->
-	<!-- <key>UTImportedTypeDeclarations</key>
-	<array>
-		<dict/>
-	</array> -->
 </dict>
 </plist>
