Change embeded App names, and add test to see if version is highly used.

--- a/SafeBible2/SafeBible_ios/SafeBible/Info.plist
+++ b/SafeBible2/SafeBible_ios/SafeBible/Info.plist
@@ -78,7 +78,7 @@
 				<string>public.content</string>
 			</array>
 			<key>UTTypeDescription</key>
-			<string>SafeBible User's Notes</string>
+			<string>The Bible. User&apos;s Notes</string>
 			<key>UTTypeIconFiles</key>
 			<array/>
 			<key>UTTypeIdentifier</key>
