--- a/SafeBible2/SafeBible_ios/SafeBible/Info.plist
+++ b/SafeBible2/SafeBible_ios/SafeBible/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
-	<string>The Bible.</string>
+	<string>Hear Holy Bible</string>
 	<key>CFBundleDocumentTypes</key>
 	<array>
 		<dict>
@@ -36,9 +36,9 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>2.1.1</string>
+	<string>2.2.1</string>
 	<key>CFBundleVersion</key>
-	<string>2.1.1</string>
+	<string>2.2.1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>LSSupportsOpeningDocumentsInPlace</key>
@@ -78,7 +78,7 @@
 				<string>public.content</string>
 			</array>
 			<key>UTTypeDescription</key>
-			<string>The Bible. User&apos;s Notes</string>
+			<string>Hear Holy Bible User's Notes</string>
 			<key>UTTypeIconFiles</key>
 			<array/>
 			<key>UTTypeIdentifier</key>
