--- a/SafeBible2/SafeBible_ios/SafeBible/Info.plist
+++ b/SafeBible2/SafeBible_ios/SafeBible/Info.plist
@@ -62,22 +62,45 @@
 				</array>
 			</dict>
 		</dict>
-		<key>CFBundlePrimaryIcon</key>
+	</dict>
+	<key>CFBundleIcons~ipad</key>
+	<dict>
+		<key>CFBundleAlternateIcons</key>
 		<dict>
-			<key>CFBundleIconFiles</key>
-			<array>
-				<string>www/icons/cross1-60@2x.png</string>
-				<string>www/icons/cross1-60@3x.png</string>
-				<string>www/icons/cross1-76.png</string>
-				<string>www/icons/cross1-76@2x.png</string>
-				<string>www/icons/cross1-83.5@2x.png</string>
-				<string>www/icons/cross1-Small-40.png</string>
-				<string>www/icons/cross1-Small-40@2x.png</string>
-				<string>www/icons/cross1-Small-40@3x.png</string>
-				<string>www/icons/cross1-Small.png</string>
-				<string>www/icons/cross1-Small@2x.png</string>
-				<string>www/icons/cross1-Small@3x.png</string>
-			</array>
+			<key>book1</key>
+			<dict>
+				<key>CFBundleIconFiles</key>
+				<array>
+					<string>www/icons/book1-60@2x.png</string>
+					<string>www/icons/book1-60@3x.png</string>
+					<string>www/icons/book1-76.png</string>
+					<string>www/icons/book1-76@2x.png</string>
+					<string>www/icons/book1-83.5@2x.png</string>
+					<string>www/icons/book1-Small-40.png</string>
+					<string>www/icons/book1-Small-40@2x.png</string>
+					<string>www/icons/book1-Small-40@3x.png</string>
+					<string>www/icons/book1-Small.png</string>
+					<string>www/icons/book1-Small@2x.png</string>
+					<string>www/icons/book1-Small@3x.png</string>
+				</array>
+			</dict>
+			<key>cross1</key>
+			<dict>
+				<key>CFBundleIconFiles</key>
+				<array>
+					<string>www/icons/cross1-60@2x.png</string>
+					<string>www/icons/cross1-60@3x.png</string>
+					<string>www/icons/cross1-76.png</string>
+					<string>www/icons/cross1-76@2x.png</string>
+					<string>www/icons/cross1-83.5@2x.png</string>
+					<string>www/icons/cross1-Small-40.png</string>
+					<string>www/icons/cross1-Small-40@2x.png</string>
+					<string>www/icons/cross1-Small-40@3x.png</string>
+					<string>www/icons/cross1-Small.png</string>
+					<string>www/icons/cross1-Small@2x.png</string>
+					<string>www/icons/cross1-Small@3x.png</string>
+				</array>
+			</dict>
 		</dict>
 	</dict>
 	<key>CFBundleIdentifier</key>
@@ -89,9 +112,9 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>2.3.1</string>
+	<string>2.3.2</string>
 	<key>CFBundleVersion</key>
-	<string>2.3.1</string>
+	<string>2.3.2</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>LSSupportsOpeningDocumentsInPlace</key>
